<resources>
    <string name="app_name">dictionaryapp</string>
    <string name="logo">Logo file</string>
    <string name="searchbar_hint">Write any word</string>
    <string name="search_sample">keyboard</string>
    <string name="sample_word">keyboard</string>
    <string name="sample_phonetics">/ˈkiːbɔːd/</string>
    <string name="audio_play_button">audio play button</string>
    <string name="search_button">search Button</string>
    <string name="txt_noun">noun</string>
    <string name="txt_meaning">Meaning</string>
    <string name="txt_synonyms">Synonyms</string>
    <string name="txt_verb">verb</string>
    <string name="txt_adj">Adjective</string>
    <string name="txt_source">Source</string>
    <string name="wlc_txt">Searching for a word in \n an analog dictionary \nhas never been so easy</string>
    <string name="get_started">GET STARTED</string>
    <string name="search_word">Search</string>
    <string name="hello_word">Hello</string>
    <string name="hello_phonetic">/həˈləʊ/</string>
</resources>