<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studios.darkzen.dictionaryapp.view.ui.MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_img_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <ImageView
        android:id="@+id/larryillustration"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/larryillustration_black"
        app:layout_constraintBottom_toTopOf="@id/gl_img_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_img_top" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_img_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_txt_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/tvAppbreif"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/lato_light"
        android:gravity="center"
        android:text="@string/wlc_txt"
        android:textColor="@color/gray"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/gl_txt_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_img_bottom" />


    <TextView
        android:id="@+id/getstarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/get_started"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/SearchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_txt_bottom" />

    <LinearLayout
        android:id="@+id/SearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/rounded_rect"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnSearch"
        app:layout_constraintTop_toBottomOf="@id/getstarted">


        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/searchbar_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textAutoCorrect"
            android:text="@string/search_sample"
            android:textColor="@color/mineshaftblack"
            android:textSize="25sp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_btn_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_btn"
        android:contentDescription="@string/search_button"
        android:text="@string/search_word"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/gl_btn_bottom"
        app:layout_constraintEnd_toStartOf="@id/gl_btn_end"
        app:layout_constraintStart_toEndOf="@id/gl_btn_start"
        app:layout_constraintTop_toBottomOf="@id/SearchBar" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_btn_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>