<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studios.darkzen.dictionaryapp.view.ui.Homepage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/responsepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo_dictionary"
                app:layout_constraintBottom_toTopOf="@id/SearchBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/SearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/rounded_rect"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/logo">


                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/lato_bold"
                    android:hint="@string/searchbar_hint"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:text="@string/search_sample"
                    android:textColor="@color/mineshaftblack" />

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20sp"
                    android:background="@null"
                    android:contentDescription="@string/search_button"
                    android:src="@drawable/ic_search" />
            </LinearLayout>


            <LinearLayout
                android:id="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/SearchBar"
                app:layout_constraintTop_toBottomOf="@id/SearchBar">


                <LinearLayout
                    android:id="@+id/wnp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvWord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/sample_word"
                        android:textColor="@color/mineshaftblack"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tvPhonetics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/sample_phonetics"
                        android:textColor="@color/fuchsia_blue"
                        android:textSize="25sp" />

                </LinearLayout>


                <ImageButton
                    android:id="@+id/btnAudioplay"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="130dp"
                    android:background="@drawable/circleshape"
                    android:contentDescription="@string/audio_play_button"
                    android:gravity="center"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_playbtn" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvNoun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/kaiuspro_bolditalic"
                android:text="@string/txt_noun"
                android:textColor="@color/tundora_black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/SearchBar"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="20sp"
                android:background="@color/xanadu_black"
                app:layout_constraintBottom_toBottomOf="@id/tvNoun"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNoun"
                app:layout_constraintTop_toTopOf="@id/tvNoun" />


            <TextView
                android:id="@+id/tvNounMeaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_meaning"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tvNoun"
                app:layout_constraintTop_toBottomOf="@id/tvNoun" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMeaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvNounMeaning" />

            <TextView
                android:id="@+id/tvSynonyms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_synonyms"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tvNoun"
                app:layout_constraintTop_toBottomOf="@id/rvMeaning" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvSynonyms" />


            <TextView
                android:id="@+id/tvVerb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kaiuspro_bolditalic"
                android:text="@string/txt_verb"
                android:textColor="@color/tundora_black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/SearchBar"
                app:layout_constraintTop_toBottomOf="@id/rvSyn" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="20sp"
                android:background="@color/xanadu_black"
                app:layout_constraintBottom_toBottomOf="@id/tvVerb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvVerb"
                app:layout_constraintTop_toTopOf="@id/tvVerb" />


            <TextView
                android:id="@+id/tvVerbMeaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_meaning"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tvVerb"
                app:layout_constraintTop_toBottomOf="@id/tvVerb" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVerbMeaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvVerbMeaning" />

            <TextView
                android:id="@+id/tvVerbSynonyms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_synonyms"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/rvVerbMeaning"
                app:layout_constraintTop_toBottomOf="@id/rvVerbMeaning" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVerbSyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvVerbSynonyms" />

            <TextView
                android:id="@+id/tvAdj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/kaiuspro_bolditalic"
                android:text="@string/txt_adj"
                android:textColor="@color/tundora_black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/SearchBar"
                app:layout_constraintTop_toBottomOf="@id/rvVerbSyn" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="115dp"
                android:layout_marginEnd="20sp"
                android:background="@color/xanadu_black"
                app:layout_constraintBottom_toBottomOf="@id/tvAdj"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvAdj"
                app:layout_constraintTop_toTopOf="@id/tvAdj" />


            <TextView
                android:id="@+id/tvAdjMeaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_meaning"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tvAdj"
                app:layout_constraintTop_toBottomOf="@id/tvAdj" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAdjMeaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvAdjMeaning" />

            <TextView
                android:id="@+id/tvAdjSynonyms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_synonyms"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/rvAdjMeaning"
                app:layout_constraintTop_toBottomOf="@id/rvAdjMeaning" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAdjSyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvAdjSynonyms" />


            <View
                android:id="@+id/Sline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:background="@color/xanadu_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rvAdjSyn"
                app:layout_constraintTop_toBottomOf="@id/rvAdjSyn" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/txt_source"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tvSlink"
                app:layout_constraintStart_toStartOf="@id/rvAdjMeaning"
                app:layout_constraintTop_toBottomOf="@id/Sline" />

            <TextView
                android:id="@+id/tvSlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="130dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/sample_word"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/rvAdjMeaning"
                app:layout_constraintTop_toBottomOf="@id/tvSource" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</RelativeLayout>